kubernetes/network-policies/00-allow-base.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace-and-ingress
  namespace: hirely
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        values:
          - mysql
          - mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
