kubernetes/network-policies/10-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-user-service-and-keycloak
  namespace: hirely
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: user-service
        - podSelector:
            matchLabels:
              app: keycloak
        - podSelector:
            matchLabels:
              app: backup
      ports:
        - protocol: TCP
          port: 3306
