kubernetes/network-policies/20-mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-allow-recrutement-service
  namespace: hirely
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: recrutement-service
        - podSelector:
            matchLabels:
              app: backup
      ports:
        - protocol: TCP
          port: 27017
