kubernetes/network-policies/40-config-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: config-service-allow-clients
  namespace: hirely
spec:
  podSelector:
    matchLabels:
      app: config-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
        - podSelector:
            matchLabels:
              app: user-service
        - podSelector:
            matchLabels:
              app: recrutement-service
      ports:
        - protocol: TCP
          port: 8888
