kubernetes/network-policies/50-discovery-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: discovery-service-allow-clients
  namespace: hirely
spec:
  podSelector:
    matchLabels:
      app: discovery-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: config-service
        - podSelector:
            matchLabels:
              app: gateway
        - podSelector:
            matchLabels:
              app: user-service
        - podSelector:
            matchLabels:
              app: recrutement-service
      ports:
        - protocol: TCP
          port: 8761
