kubernetes/network-policies/80-user-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-service-allow-clients
  namespace: hirely
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app: gateway
        - podSelector:
            matchLabels:
              app: frontend-service
        - podSelector:
            matchLabels:
              app: recrutement-service
      ports:
        - protocol: TCP
          port: 8081
